# waterflow

./: .gitignore  README.md  main.py  pyproject.toml  registry_models.py
.github/workflows/: ci-waterflow.yml
notebook/: exploratory_analysis.ipynb
ops/: Dockerfile
src/waterflow/: experiment.py
tests/functionnal/app/: test_functionnal_app.py
tests/functionnal/mlflow/: test_functionnal_mlflow_experiment.py
tests/unit/app/: test_unit_app.py
tests/unit/mlflow/: test_unit_mlflow_preprocessing.py
watch/: bibiliography.md  mlflow.md  mlops.md
waterflow/: app.py  experiment.py
waterflow/ops/: registry_models.py
