[project]
name = "waterflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "mlflow>=3.1.1",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipython>=9.3.0",
]
