[project]
name = "waterflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "mlflow>=3.1.1",
    "pandas>=2.3.0",
    "pytest>=8.4.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "xgboost>=3.0.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipython>=9.3.0",
]
